BB-7041: FrontStore > Quick Order > Add to Shopping list button wrong style in Import Validation popup. - fixed buttn label name - fixed position of nutton(cropped effect) - fixed bg color of button

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/quick-order.scss
@@ -333,3 +333,9 @@
     }
   }
 }
+
+.oro_product_quick_add {
+   .hidden-form {
+     display: none;
+   }
+}
