--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/blank/scss/styles.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/blank/scss/styles.scss
@@ -1,8 +1,1 @@
 // @theme: blank
-.mass-action-controls{
-  .btn-group.full{
-      .add-to-shopping-list-button{
-        width: auto;
-      }
-  }
-}
